--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ repositories {
     mavenLocal()
     jcenter()
     maven { url 'https://kotlin.bintray.com/ktor' }
+    maven { url = uri("http://mvn.sems.uni-rostock.de/releases/") }
 }
 
 dependencies {
@@ -65,6 +66,9 @@ dependencies {
     implementation "io.ktor:ktor-server-core:$ktor_version"
     implementation "io.ktor:ktor-freemarker:$ktor_version"
     implementation "io.ktor:ktor-server-host-common:$ktor_version"
+
+    // Formats
+    implementation "de.uni-rostock.sbi:CombineArchive:1.4.0"
 
     testImplementation "io.ktor:ktor-server-tests:$ktor_version"
 }
