--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,15 @@ repositories {
     jcenter()
     maven { url 'https://kotlin.bintray.com/ktor' }
     maven { url = uri("http://mvn.sems.uni-rostock.de/releases/") }
+
+    maven {
+        name 'fskml'
+        url 'https://maven.pkg.github.com/silebat/fskml'
+        credentials {
+            username project.findProperty("github.packages.username") ?: System.getenv("GITHUB_NAME")
+            password project.findProperty("github.packages.password") ?: System.getenv("GITHUB_TOKEN")
+        }
+    }
 }
 
 dependencies {
@@ -69,6 +78,7 @@ dependencies {
 
     // Formats
     implementation "de.uni-rostock.sbi:CombineArchive:1.4.0"
+    implementation "de.bund.bfr:fskml:1.0.12"
 
     testImplementation "io.ktor:ktor-server-tests:$ktor_version"
 }
