--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -3,6 +3,7 @@ name: Java CI
 on: [push]
 
 jobs:
+
   build:
     runs-on: ubuntu-latest
 
@@ -12,8 +13,9 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
-      - name: Build
+      - name: Analyze with SonarCloud
         env:
           GITHUB_NAME: ${{ secrets.GITHUB_ACTOR }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-        run: ./gradlew build --info
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: ./gradlew build sonarqube --info
