--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ sonarqube {
         property "sonar.projectKey", "RakipInitiative_fskx_validator"
         property "sonar.organization", "rakipinitiative"
         property "sonar.host.url", "https://sonarcloud.io"
+        property("sonar.coverage.jacoco.xmlReportPaths", "${project.buildDir}/reports/jacoco/test/jacocoTestReport.xml")
     }
 }
 
@@ -39,13 +40,23 @@ tomcat {
     ajpProtocol  = 'org.apache.coyote.ajp.AjpNio2Protocol'
 }
 
+tasks.jacocoTestReport {
+    dependsOn("test")
+
+    executionData(file("$buildDir/jacoco/test.exec"))
+    reports {
+        xml.enabled(true)
+        html.enabled(true)
+    }
+}
+
 // For running locally
 mainClassName = "io.ktor.server.tomcat.EngineMain"
 
 sourceSets {
-    main.kotlin.srcDirs = main.java.srcDirs = ['src']
-    test.kotlin.srcDirs = test.java.srcDirs = ['test']
+    main.kotlin.srcDirs = ['src']
     main.resources.srcDirs = ['resources']
+    test.kotlin.srcDirs = ['test']
     test.resources.srcDirs = ['testresources']
 }
 
@@ -83,3 +94,4 @@ dependencies {
 
     testImplementation "io.ktor:ktor-server-tests:$ktor_version"
 }
+
