--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ sonarqube {
         property "sonar.organization", "rakipinitiative"
         property "sonar.host.url", "https://sonarcloud.io"
         property("sonar.coverage.jacoco.xmlReportPaths", "${project.buildDir}/reports/jacoco/test/jacocoTestReport.xml")
+        property("sonar.sources", "src")
+        property("sonar.tests", "test")
     }
 }
 
