--- a/build.gradle
+++ b/build.gradle
@@ -63,9 +63,9 @@ sourceSets {
 }
 
 repositories {
-    mavenLocal()
+    //mavenLocal()
     jcenter()
-    maven { url 'https://kotlin.bintray.com/ktor' }
+    //maven { url 'https://kotlin.bintray.com/ktor' }
     maven { url = uri("http://mvn.sems.uni-rostock.de/releases/") }
 
     maven {
@@ -95,5 +95,9 @@ dependencies {
     implementation "de.bund.bfr:fskml:1.0.12"
 
     testImplementation "io.ktor:ktor-server-tests:$ktor_version"
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.15.0'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.15.0'
+    compile("org.apache.logging.log4j:log4j-slf4j-impl:2.15.0")
+    compile("org.apache.logging.log4j:log4j-1.2-api:2.15.0")
 }
 
