--- a/build.gradle
+++ b/build.gradle
@@ -72,8 +72,8 @@ repositories {
         name 'fskml'
         url 'https://maven.pkg.github.com/silebat/fskml'
         credentials {
-            username project.findProperty("github.packages.username") ?: System.getenv("GITHUB_NAME")
-            password project.findProperty("github.packages.password") ?: System.getenv("GITHUB_TOKEN")
+            username project.findProperty("github.packages.username").toString() ?: System.getenv("GITHUB_NAME")
+            password project.findProperty("github.packages.password").toString() ?: System.getenv("GITHUB_TOKEN")
         }
     }
 }
@@ -95,9 +95,9 @@ dependencies {
     implementation "de.bund.bfr:fskml:1.0.12"
 
     testImplementation "io.ktor:ktor-server-tests:$ktor_version"
-    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.0'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.0'
-    compile("org.apache.logging.log4j:log4j-slf4j-impl:2.17.0")
-    compile("org.apache.logging.log4j:log4j-1.2-api:2.17.0")
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
+    compile("org.apache.logging.log4j:log4j-slf4j-impl:2.17.1")
+    compile("org.apache.logging.log4j:log4j-1.2-api:2.17.1")
 }
 
